tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__options__image_size_integer.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Circle[]}, ImageSize -> 200]\")"
---
<svg width="200" height="200" viewBox="0 0 200 200" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_200x200"><rect x="0" y="0" width="200.00" height="200.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_200x200)">
<ellipse cx="100.00" cy="100.00" rx="92.59" ry="92.59" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
