tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__options__image_size_named.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Circle[]}, ImageSize -> Large]\")"
---
<svg width="480" height="480" viewBox="0 0 480 480" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_480x480"><rect x="0" y="0" width="480.00" height="480.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_480x480)">
<ellipse cx="240.00" cy="240.00" rx="222.22" ry="222.22" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
