tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__options__image_size_pair.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Circle[]}, ImageSize -> {400, 300}]\")"
---
<svg width="400" height="300" viewBox="0 0 400 300" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_400x300"><rect x="0" y="0" width="400.00" height="300.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_400x300)">
<ellipse cx="200.00" cy="150.00" rx="138.89" ry="138.89" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00"/>
</g>
</svg>
